# SetupV3

./: OB_uzd_1.sln  README.md
OB_uzd_1/: CMakeLists.txt  OB_TEST.txt  OB_uzd_1.vcxproj  OB_uzd_1.vcxproj.filters  RUNMEE.bat  Studentai1000.txt  Studentas.cpp  Studentas.h  generuoti_studentai.txt  gudrociai_bim  klaseIrasoFaila.txt  main.cpp  my_lib.cpp  my_lib.h  my_lib_v.cpp  reading.cpp  resource.h  studentai10000.txt  studentai1000000.txt.txt  vargsiukai_bam
OB_uzd_1/html/: _studentas_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  dir_f439454991702bfee66f3d45be5db1c2.html  doxygen_crawl.html  files.html  hierarchy.html  index.html  my__lib_8h_source.html  resource_8h_source.html
ProgramInstallSetup/: ProgramInstallSetup.vdproj
